--- a/frontend/skillshare/package.json
+++ b/frontend/skillshare/package.json
@@ -23,7 +23,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
